Update Redis dependency to ddev/ddev-redis
In upcoming DDEV version v1.24.8, `ddev add-on get` will try to download dependencies, so the `dependencies` list has to show where the dependencies can come from. Please pull this and make a new release, thanks!

--- a/install.yaml
+++ b/install.yaml
@@ -1,7 +1,7 @@
 name: notification-server
 
 dependencies:
-  - redis
+  - ddev/ddev-redis
 
 project_files:
   - docker-compose.notification-server.yaml
